Fix layout issues on safari
Contributes to #1955

--- a/packages/composer-playground/src/app/identity/identity-issued/identity-issued.component.scss
+++ b/packages/composer-playground/src/app/identity/identity-issued/identity-issued.component.scss
@@ -10,7 +10,7 @@ identity-issued-modal {
 
       .new-card-options {
         position: absolute;
-        margin-left: 275px; // the size of an ID card
+        left: 275 + $space-medium; // the size of an ID card + padding
         padding: 0 $space-medium $space-medium $space-medium;
 
         dl.enrollment-credentials {
